--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,52 +4,48 @@
     <h1>Products</h1>
     <%= link_to t(".new product"), new_product_path, class: "btn btn-primary"%>
     <div style="float: right;margin-bottom: 15px;">
-      <%= form_tag(products_path, method: :get) do %>
-      <%= text_field_tag :search %>
-      <%= submit_tag t(".search") %>
+      <%= search_form_for @search do |f| %>    
+        <%= f.text_field :price_or_name_or_category_name_cont, placeholder: "Search..." %>
+        <%= f.submit t(".search") %>
       <% end %>
     </div>
     <table class="table table-bordered table-hover" style="text-align:center">
-      <%= link_to t(".oldest"), products_path(sort_by: "oldest")%> |
-      <%= link_to t(".newest"), products_path(sort_by: "newest")%> |
-      <%= link_to t(".name"), products_path(sort_by: "name")%> |
-      <%= link_to t(".price"), products_path(sort_by: "price")%> |
       <br>
       <tr>
         <th>#</th>
-        <th><%= t ".category"%></th>
-        <th><%= t ".name"%></th>
+        <th><%= sort_link(@search, :category_name, t(".category"))%></th>
+        <th><%= sort_link(@search, :name, t(".name"))%></th>
         <th><%= t ".avarta"%></th>
-        <th><%= t ".price"%></th>
+        <th><%= sort_link(@search, :price, t(".price"))%></th>
         <th><%= t ".show"%></th>
         <th><%= t ".edit"%></th>
         <th><%= t ".delete"%></th>
         <th><%= t ".add to cart"%></th>
       </tr>
-      <% @product.each.with_index(1) do |product, index| %>
+      <% @products.each.with_index(1) do |products, index| %>
       <tr>
         <td><%= index %></td>
-        <td><%= product.category.name%></td>
-        <td><%= product.name %></td>
-        <td><%= image_tag product.image_link_url, width:"120px", height:"120px"%></td>
-        <td><%=number_to_currency(product.price) %></td> 
+        <td><%= products.category.name%></td>
+        <td><%= products.name %></td>
+        <td><%= image_tag products.image_link_url, width:"120px", height:"120px"%></td>
+        <td><%= number_to_currency(products.price) %></td> 
         <td>
           <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-          <span class="glyphicon-class"> <%= link_to t(".show"),  product_path(product)%></span>
+          <span class="glyphicon-class"> <%= link_to t(".show"),  product_path(products)%></span>
         </td>
         <td>
          <span class="glyphicon glyphicon-pencil" aria-hidden="true"> </span>
-         <span class="glyphicon-class"><%= link_to t(".edit"),  edit_product_path(product) %></span>
+         <span class="glyphicon-class"><%= link_to t(".edit"),  edit_product_path(products) %></span>
         </td>
         <td>
           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-          <span class="glyphicon-class"><%= link_to t(".delete"), product_path(product),
+          <span class="glyphicon-class"><%= link_to t(".delete"), product_path(products),
            method: :delete,
            data: { confirm: 'Are you sure?' } %></span>
         </td>
         <td>
           <%= form_for Order.new do |order|%>
-          <%= order.hidden_field :product_id, value: product.id %>
+          <%= order.hidden_field :product_id, value: products.id %>
           <%= order.submit t(".add to cart"), class: "btn btn-primary" %> 
           <%= order.number_field :quantity, style: "width: 56px; height: 33px;margin-top: 9px;margin-left:72px", value: 1, min: 1, class: "form-control" %>
           <% end %> 
@@ -57,7 +53,7 @@
       </tr>
       <% end %>
     </table>
-    <div style="float:right;margin-right: 67px;"><%= paginate @product %></div>
+    <div style="float:right;margin-right: 67px;"><%= paginate @products %></div>
   </div>
 </div>
 <%= render "shared/footer" %>
