--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -15,3 +15,11 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+.image_link_index {
+  width: 90px;
+  height: auto;
+}
+.image_link_view {
+  width: 400px;
+  height: 267px;
+}
