--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
+
 h1.title {
   font-size: 70px !important;
   text-align: center !important;
@@ -25,36 +27,120 @@ h1.title {
   font-weight: bold;
   color: #778fb7;
 }
+
 h1.deal_detail_name {
-    font-size: 60px;;
-    color: #ff7a00;
-    text-align: left;
-    margin: 26px 0 0 0;
-    ont-weight: bold;
+	font-size: 60px;;
+	color: #ff7a00;
+	text-align: left;
+	margin: 26px 0 0 0;
+	font-weight: bold;
 }
+
 h2.deal_detail_name_long {
-    font-size: 17px;
-    color: #414141;
-    text-align: justify;
-    margin-bottom: 10px;
-    font-weight: normal;
-    line-height: 22px;
+  font-size: 17px;
+  color: #414141;
+  text-align: justify;
+  margin-bottom: 10px;
+  font-weight: normal;
+  line-height: 22px;
 }
+
 span.detail_price {
-    font-size: 28px;
-    color: #ff7a00;
-    font-weight: bold;
-    width: 100%;
-    line-height: 30px;
+  font-size: 28px;
+  color: #ff7a00;
+  font-weight: bold;
+  width: 100%;
+  line-height: 30px;
 }
+
 .cart_title {
-font: 120% bold;
+	font: 120% bold;
 }
 .item_price, #store .total_line {
-text-align: right;
+	text-align: right;
 }
 
 .total_line .total_cell {
-font-weight: bold;
-border-top: 1px solid #595;
+	font-weight: bold;
+	border-top: 1px solid #595;
+}
+
+.header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1031;
+  background-color: #343a40 !important;
+}
+
+.header .container .web-title {
+  color: white;
+  font-size: 22px;
+  display: inline-block;
+  margin-top: 10px;
+  text-decoration: none;
+  
+}
+
+#navbar {
+  width: 80%;
+  float: right;
+}
+
+ul.nav.navbar-nav.navbar-right li a {
+ color:#dacdcd
+}
+
+.rounded{
+  border-radius: 50%;
+  display: block;
+  height: 35px;
+  width: 35px;
+  margin-top: 8px;
+}
+
+.rounded1{
+  border-radius: 50%;
+  display: block;
+  height: 150px;
+  width: 150px;
+}
+
+.foot {
+  background-color: #343a40!important;
+  padding: 45px 0px 45px 0px;
+  width: 100%;
+
+}
+.foot .container .copyright {
+  text-align: center!important;
+  color: #fff!important;
+  font-size: 21px;
+  margin: 0px;
+}
+
+ul.nav.navbar-nav.navbar-right li a:hover{
+  background: #383B43; 
+  text-decoration: none !important;
+}
+
+.container-index {
+  min-height: 1223px;
+  width: 1140px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.container-index .col-lg-3 {
+  margin-top: 58px;
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+.col-lg-9 {
+  margin-top: 85px;
+}
+.boxpic {
+  width: 237.48px;
+  height: 331,13px;
 }
