--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,39 +2,39 @@
   <h2 class="title1">Edit <%= resource_name.to_s.humanize %></h2>
 </div>
 <div class="row">
- <div class="col-lg-offset-3 col-lg-6">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <div class="form-group">
-    <center><%= image_tag "#{@user.avatar}", width:"160px", height:"160px" %></br></center>
-    <%= f.label :avatar,'Avatar'%>
-    <%= f.file_field :avarta%>
-  </div>
-  <div class="form-group">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :phone %><br />
-    <%= f.text_field :phone, autofocus: true, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true, class: "form-control" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-  </div>
+  <div class="col-lg-offset-3 col-lg-6">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+      <div class="form-group">
+        <center><%= image_tag "#{@user.avatar}", class:"rounded1" %></br></center>
+        <%= f.label :avatar,'Avatar'%>
+        <%= f.file_field :avatar%>
+      </div>
+      <div class="form-group">
+        <%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :phone %><br />
+        <%= f.text_field :phone, autofocus: true, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :address %><br />
+        <%= f.text_field :address, autofocus: true, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <div class="form-group">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-    <% if @minimum_password_length %>
+    <div class="form-group">
+      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+       <% if @minimum_password_length %>
     <br />
     <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
