--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -17,7 +17,7 @@
 //   .status_tag { background: #6090DB; }
 .image_link_index {
   width: 90px;
-  height: auto;
+  height: 60px;
 }
 .image_link_view {
   width: 400px;
