--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,7 @@ span.detail_price {
   display: inline-block;
   margin-top: 10px;
   text-decoration: none;
+  float: left;
   
 }
 
@@ -126,7 +127,7 @@ ul.nav.navbar-nav.navbar-right li a:hover{
 }
 
 .container-index {
-  min-height: 1223px;
+  min-height: 1000px;
   width: 1140px;
   margin-right: auto;
   margin-left: auto;
@@ -137,10 +138,44 @@ ul.nav.navbar-nav.navbar-right li a:hover{
   flex: 0 0 25%;
   max-width: 25%;
 }
+
 .col-lg-9 {
   margin-top: 85px;
 }
-.boxpic {
-  width: 237.48px;
-  height: 331,13px;
+
+.col-lg-4.col-md-6.mb4 {
+  height: 403.56px;
+}
+
+.col-lg-4.col-md-6.mb4 .card-hd {
+  width: 254.98px;
+  height: 93%;
+  border: 1px solid rgba(0,0,0,.125);
+}
+.col-lg-4.col-md-6.mb4 .card-hd a img {
+  width:100%;
+  height:240px;
+  padding: 13px 14px 33px 20px;
+}
+.card-body {
+  width: 100%;
+  height: 123.55px;
+}
+
+a.link-sell {
+  text-decoration: none;
+  color: #343a40;
+}
+
+.table-hover tr td a{
+  text-decoration: none !important;
+}
+
+.table-hover tr th{
+  text-align: center;
+  text_decoration:none;
+}
+
+#navbar {
+  width: 50%;
 }
