--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,12 +1,19 @@
-<%= render "shared/header" %>
-<div class ="container container-index">
-  <div class ="row">
+ <div class ="row">
     <div class ="col-lg-3">
-      <h1 class="category">Category</h1>
+      <h1 class="category"><%= t".Category"%></h1>
       <div class="list-group">
         <% @category.each do |c|%>
-          <%= link_to c.name,categories_path, class: "list-group-item"%>
+          <%= link_to c.name,category_path(c), class: "list-group-item"%>
         <% end %>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading" style = "text-align:center">Your Shop</div>
+        <div class="panel-body">
+          <%= link_to 'All items',products_path, class: "link-sell" %>
+        </div>
+        <div class="panel-body">
+          <%= link_to 'Sold', user_sold_path, class: "link-sell" %>
+        </div>
       </div>
     </div>
     <div class = "col-lg-9">
@@ -26,11 +33,6 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="pictures/asus-ux370u-i7-8550u-8gb-512gb-win10-c4217ts-but-400x400.jpg" alt="Third slide">
           </div>  %>
-          <%# <% @products.each do |product| %> 
-            <%# <div class="carousel-item"> %>
-            <%# <%= image_tag product.image_link.url, class: "d-block w-100"%> 
-          <%# </div> %>
-          <%# <% end %>
         <%# </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -41,14 +43,9 @@
           <span class="sr-only">Next</span>
         </a>
       </div> %>
-       <% @products.each do |p|%>
-        <div class="boxpic">
-          <%# <img src="pictures/jeans1.jpg" style="width:100%"> %>
-          <%= image_tag p.image_link_url, width:"205,48px", height:"256.84px" %>
-          <p>Ripped Skinny Jeans<br><b>$24.99</b></p>
-        </div>
-        <% end %>
+      <div class = "row">
+       <%= render partial: "shared/formproduct",  collection: @products, as: "p" %>
+      </div>
     </div>
-  </div>
+    <div style= "float:right;margin-right: 67px;"><%= paginate @products %></div>
 </div>
-<%= render "shared/footer" %>
