--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,16 @@
 	</head>
 
 	<body>
+		<% if user_signed_in?%>
+			<%= render "shared/header" %>
+		<% end %>
+		<div class ="container container-index">
   	<%= yield %>
-		<!-- <p class="notice"><%= notice %></p>
-			<p class="alert"><%= alert %></p> -->
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		</div>
+		<% if user_signed_in?%>
+			<%= render "shared/footer" %>
+		<% end %>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+ 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</body>
 </html>
