--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,38 +1,45 @@
-<div class="container">
-  <div class="row">
-    <h1 class="title1">Update Product</h1> 
-  </div>
-  <div class="col-lg-offset-3 col-lg-6">
+<div class="row" style = "margin-top:70px">
+    <h1 class="title1"><%= t".update items"%></h1> 
+</div>
+<div class="col-lg-offset-3 col-lg-6">
     <!--   if @product.errors.present?
       @product.errors.full_messages -->
-    <%= form_for @product, html: {class: "form-horizontal"} do |f| %>
-      <div class="form-group">
-        <%= f.label :name, "Name"%>
-        <%= f.text_field :name, class: "form-control", placeholder: "Enter product name", value:"#{@product.name}" %>
+  <%= form_for @product, html: {class: "form-horizontal"} do |f| %>
+    <% if @product.errors.any? %>
+      <div class="alert alert-danger">
+		    <ul>
+				<% @product.errors.full_messages.each do |message| %>
+					<li><%= message %></li>
+				<% end %>
+		    </ul>
       </div>
-      <div class="form-group">
-        <%= f.label :category, "Category"%><br>
-        <%= f.collection_select :category_id, Category.all, :id, :name, class:"btn btn-default dropdown-toggle"%>
+	  <% end %>
+    <div class="form-group">
+      <%= f.label :name, t(".name")%>
+      <%= f.text_field :name, class: "form-control", placeholder: "Enter product name", value:"#{@product.name}" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :category, t(".category")%><br>
+      <%= f.collection_select :category_id, Category.all, :id, :name, class:"btn btn-default dropdown-toggle"%>
+    </div>
+    <div class="form-group">
+      <%= f.label :price, t(".price")%>
+      <%= f.text_field :price, class: "form-control", placeholder: "Enter price product", value:"#{@product.price}" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :content, t(".description")%>
+      <%= f.text_area :content, class: "form-control", placeholder: "Write decripstion product", rows: "5", value:"#{@product.content}" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :image_link, t(".avatar")%>
+      <%= f.file_field :image_link%>
+      <%= image_tag "#{@product.image_link}", width:"120px", height:"120px",style: "margin-top: 6px" %>
+    </div>
+    <div class="form-group">
+      <div class="col-lg-offset-9">
+        <%= f.submit t(".Update Item"), class: "btn btn-success btn-lg" %>
+          <%# <%= link_to 'Back',  products_path, class: "btn btn-primary"%>
       </div>
-      <div class="form-group">
-        <%= f.label :price, "Price"%>
-        <%= f.text_field :price, class: "form-control", placeholder: "Enter price product", value:"#{@product.price}" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :content, "Description"%>
-        <%= f.text_area :content, class: "form-control", placeholder: "Write decripstion product", rows: "5", value:"#{@product.content}" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :image_link, "Avatar"%>
-        <%= f.file_field :image_link%>
-        <%= image_tag "#{@product.image_link}", width:"120px", height:"120px" %>
-      </div>
-      <div class="form-group">
-        <div class="col-lg-offset-8">
-          <%= f.submit "Update Product", class: "btn btn-success" %>
-          <%= link_to 'Back',  products_path, class: "btn btn-primary"%>
-        </div>
-      </div>
-      <% end %>
-  </div>
+    </div>
+    <% end %>
 </div>
