--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,26 +1,23 @@
-<%= render "shared/header" %>
-<div class="container">
-  <div class="row">
-    <h1>Products</h1>
-    <%= link_to t(".new product"), new_product_path, class: "btn btn-primary"%>
-    <div style="float: right;margin-bottom: 15px;">
-      <%= search_form_for @search do |f| %>    
-        <%= f.text_field :price_or_name_or_category_name_cont, placeholder: "Search..." %>
-        <%= f.submit t(".search") %>
-      <% end %>
-    </div>
+<div class="row" style = "margin-top:80px">
+    <h1><%= t ".Your Items" %></h1>
+    <%= link_to t(".add item for sale"), new_product_path, class: "btn btn-primary"%>
+      <%= search_form_for(@q,class:"navbar-form navbar-right") do |f|    %> 
+        <div class="form-group">
+          <%= f.search_field :name_or_price_or_category_name_cont, placeholder: t(".search"), class: 'form-control' %>
+        </div>
+        <%= f.submit t(".search"), class: 'btn btn-default' %> 
+       <% end %> 
     <table class="table table-bordered table-hover" style="text-align:center">
       <br>
       <tr>
         <th>#</th>
-        <th><%= sort_link(@search, :category_name, t(".category"))%></th>
-        <th><%= sort_link(@search, :name, t(".name"))%></th>
-        <th><%= t ".avarta"%></th>
-        <th><%= sort_link(@search, :price, t(".price"))%></th>
+        <th><%= sort_link(@q, :category_name, t(".category"))%></th>
+        <th><%= sort_link(@q, :name, t(".name"))%></th>
+        <th><%= t ".avatar"%></th>
+        <th><%= sort_link(@q, :price, t(".price"))%></th>
         <th><%= t ".show"%></th>
         <th><%= t ".edit"%></th>
         <th><%= t ".delete"%></th>
-        <th><%= t ".add to cart"%></th>
       </tr>
       <% @products.each.with_index(1) do |products, index| %>
       <tr>
@@ -30,25 +27,15 @@
         <td><%= image_tag products.image_link_url, width:"120px", height:"120px"%></td>
         <td><%= number_to_currency(products.price) %></td> 
         <td>
-          <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-          <span class="glyphicon-class"> <%= link_to t(".show"),  product_path(products)%></span>
+         <i class="fa fa fa-eye fa-1x"></i> <%= link_to t(".show"),  product_path(products)%>
         </td>
         <td>
-         <span class="glyphicon glyphicon-pencil" aria-hidden="true"> </span>
-         <span class="glyphicon-class"><%= link_to t(".edit"),  edit_product_path(products) %></span>
+          <i class="fa fa-pencil"></i> <%= link_to t(".edit"),  edit_product_path(products) %>
         </td>
         <td>
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-          <span class="glyphicon-class"><%= link_to t(".delete"), product_path(products),
+           <i class="fa fa-trash-o"></i> <%= link_to t(".delete"), product_path(products),
            method: :delete,
            data: { confirm: 'Are you sure?' } %></span>
-        </td>
-        <td>
-          <%= form_for Order.new do |order|%>
-          <%= order.hidden_field :product_id, value: products.id %>
-          <%= order.submit t(".add to cart"), class: "btn btn-primary" %> 
-          <%= order.number_field :quantity, style: "width: 56px; height: 33px;margin-top: 9px;margin-left:72px", value: 1, min: 1, class: "form-control" %>
-          <% end %> 
         </td>
       </tr>
       <% end %>
@@ -56,4 +43,3 @@
     <div style="float:right;margin-right: 67px;"><%= paginate @products %></div>
   </div>
 </div>
-<%= render "shared/footer" %>
