--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,38 +1,44 @@
-<div class="container">
-  <div class="row">
-    <h1 class="title1"><%= t ".new product"%></h1> 
-  </div>
-  <div class="col-lg-offset-3 col-lg-6">
+<div class="row" style = "margin-top:70px">
+    <h1 class="title1"><%= t ".add items"%></h1> 
+</div>
+<div class="col-lg-offset-3 col-lg-6">
   <%= form_for @product, html: {class: "form-horizontal"} do |f| %>
-  <div class="form-group">
-    <%= f.label :name, t(".name")%>
-    <%= f.text_field :name, class: "form-control", placeholder: "Enter product name"%>
-  </div>
-  <div class="form-group">
-    <%= f.label :category, t(".category")%><br>
-    <%= f.collection_select :category_id, Category.all, :id, :name, class: "selectpicker"%>
-  </div>
-  <div class="form-group">
-    <%= f.label :price, t(".price")%>
-    <%= f.text_field :price, class: "form-control", placeholder: "Enter price product" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :content, t(".description")%>
-    <%= f.text_area :content, class: "form-control", placeholder: "Write decripstion product", rows: "5" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :image_link, t(".avatar")%>
-    <%= f.file_field :image_link, accept:"image/*", onchange:"loadFile(event)"%>
-    <img id="output" width="120px" height="120px" style="margin-top: 6px">
-  </div>
-  <div class="form-group">
-    <div class="col-lg-offset-8">
-      <%= f.submit "Add Product", class: "btn btn-success" %>
-      <%= link_to 'Back', products_path, class: "btn btn-primary"%>
+	  <% if @product.errors.any? %>
+      <div class="alert alert-danger">
+		    <ul>
+				<% @product.errors.full_messages.each do |message| %>
+					<li><%= message %></li>
+				<% end %>
+		    </ul>
+      </div>
+	  <% end %>
+    <div class="form-group">
+      <%= f.label :name, t(".name")%>
+      <%= f.text_field :name, class: "form-control", placeholder: "Enter product name"%>
     </div>
-  </div>
+    <div class="form-group">
+      <%= f.label :category, t(".category")%><br>
+      <%= f.collection_select :category_id, Category.all, :id, :name, class: "selectpicker"%>
+    </div>
+    <div class="form-group">
+      <%= f.label :price, t(".price")%>
+      <%= f.text_field :price, class: "form-control", placeholder: "Enter price product" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :content, t(".description")%>
+      <%= f.text_area :content, class: "form-control", placeholder: "Write decripstion product", rows: "5" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :image_link, t(".avatar")%>
+      <%= f.file_field :image_link, accept:"image/*", onchange:"loadFile(event)"%>
+      <img id="output" width="120px" height="120px" style="margin-top: 6px">
+    </div>
+    <div class="form-group">
+      <div class="col-lg-offset-9">
+        <%= f.submit t(".Add Product"), class: "btn btn-success btn-lg" %>
+      </div>
+    </div>
   <% end %>
-  </div>
 </div>
 <script>
   var loadFile = function(event) {
