--- a/app/views/shared/_error_message.html.erb
+++ b/app/views/shared/_error_message.html.erb
@@ -1,10 +1,10 @@
-<% if object.errors.any? %>
-<%= pluralize(object.errors.count, "error")%>
-<ul>
-	<% object.errors.full_messages.each do |msg|%>
-	<li>
-		<%= msg %>
-	</li>
-	<% end %>
-</ul>
+<% if @post.errors.any? %>
+	<div class="alert alert-danger">
+		<h2>Errors:</h2>
+		<ul>
+				<% @post.errors.full_messages.each do |message| %>
+					<li><%= message %></li>
+				<% end %>
+		</ul>
+	</div>
 <% end %>
